--- a/ArtLyst/SampleData/MainViewModelSampleData.xaml
+++ b/ArtLyst/SampleData/MainViewModelSampleData.xaml
@@ -5,12 +5,11 @@
     SampleProperty="Sample Text Property Value">
 
     <vm:MainViewModel.Items>
-        <vm:ItemViewModel LineOne="design one" LineTwo="Maecenas praesent accumsan bibendum" LineThree="Maecenas praesent accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur"/>
-        <vm:ItemViewModel LineOne="design two" LineTwo="Dictumst eleifend facilisi faucibus" LineThree="Pharetra placerat pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent"/>
-        <vm:ItemViewModel LineOne="design three" LineTwo="Habitant inceptos interdum lobortis" LineThree="Accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat"/>
-        <vm:ItemViewModel LineOne="design four" LineTwo="Nascetur pharetra placerat pulvinar" LineThree="Pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum"/>
-        <vm:ItemViewModel LineOne="design five" LineTwo="Sagittis senectus sociosqu suscipit" LineThree="Dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat pulvinar sagittis"/>
-        <vm:ItemViewModel LineOne="design six" LineTwo="Torquent ultrices vehicula volutpat" LineThree="Senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum dictumst eleifend"/>
+        <vm:ItemViewModel Title="Polke Richter - Richter Polke" Date="25 Apr - 07 Jul" ImageUrl="http://artlyst.com/img/events/12896.jpg"/>
+        <vm:ItemViewModel Title="Henri Matisse: The Cut Outs" Date="17 Apr - 07 Sep" ImageUrl="http://artlyst.com/img/events/8518.jpg"/>
+        <vm:ItemViewModel Title="Julian Schnabel" Date="25 Apr - 27 Jul" ImageUrl="http://artlyst.com/img/events/12909.jpg"/>
+        <vm:ItemViewModel Title="Andreas Gursky Landscapes" Date="25 Apr - 07 Jul" ImageUrl="http://artlyst.com/img/events/12446.jpg"/>
+        <vm:ItemViewModel Title="Alan Davie" Date="25 Apr - 07 Jul" ImageUrl="http://artlyst.com/img/events/12805.jpg"/>
     </vm:MainViewModel.Items>
 
 </vm:MainViewModel>
