--- a/ArtLyst/ItemPage.xaml
+++ b/ArtLyst/ItemPage.xaml
@@ -6,39 +6,51 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     d:DataContext="{d:DesignData SampleData/ItemViewModelSampleData.xaml}"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    toolkit:TiltEffect.IsTiltEnabled="True">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <StackPanel Margin="0,0,0,12" Grid.Row="0">
+    <toolkit:TransitionService.NavigationInTransition>
+        <toolkit:NavigationInTransition>
+            <toolkit:NavigationInTransition.Backward>
+                <toolkit:TurnstileTransition Mode="BackwardIn"/>
+            </toolkit:NavigationInTransition.Backward>
+            <toolkit:NavigationInTransition.Forward>
+                <toolkit:TurnstileTransition Mode="ForwardIn"/>
+            </toolkit:NavigationInTransition.Forward>
+        </toolkit:NavigationInTransition>
+    </toolkit:TransitionService.NavigationInTransition>
+    <toolkit:TransitionService.NavigationOutTransition>
+        <toolkit:NavigationOutTransition>
+            <toolkit:NavigationOutTransition.Backward>
+                <toolkit:TurnstileTransition Mode="BackwardOut"/>
+            </toolkit:NavigationOutTransition.Backward>
+            <toolkit:NavigationOutTransition.Forward>
+                <toolkit:TurnstileTransition Mode="ForwardOut"/>
+            </toolkit:NavigationOutTransition.Forward>
+        </toolkit:NavigationOutTransition>
+    </toolkit:TransitionService.NavigationOutTransition>
+
+    <ScrollViewer>
+        <StackPanel VerticalAlignment="Stretch">
             <TextBlock TextWrapping="Wrap" Text="{Binding Title}" Style="{StaticResource PhoneTextTitle1Style}"/>
-            <StackPanel Margin="12">
-                <TextBlock Text="{Binding Date}"/>
-                <TextBlock Text="{Binding Venue}"/>
-                <TextBlock Text="{Binding Cost}"/>
+            <Image Source="{Binding ImageUrl}" Margin="0,12,0,12"/>
+
+            <TextBlock Text="{Binding Date}" Style="{StaticResource PhoneTextBlockBase}"/>
+            <StackPanel Margin="0,12,0,12">
+                <TextBlock Text="{Binding Venue}" Style="{StaticResource PhoneTextBlockBase}"/>
+                <TextBlock Text="{Binding Address}" Style="{StaticResource PhoneTextBlockBase}"/>
             </StackPanel>
-        </StackPanel>
-
-        <Image Source="{Binding ImageUrl}" Grid.Row="1"/>
-
-        <StackPanel Grid.Row="2">
+            <TextBlock Text="{Binding Cost}" Style="{StaticResource PhoneTextBlockBase}"/>
+            <HyperlinkButton Content="{Binding WebUrl}" NavigateUri="{Binding WebUrl}" HorizontalAlignment="Left" TargetName="_blank"/>
             <TextBlock TextWrapping="Wrap" Text="{Binding Description}" Style="{StaticResource PhoneTextBlockBase}"/>
-        </StackPanel>
 
-        <StackPanel Grid.Row="3" Margin="12">
-            <TextBlock Text="{Binding Address}"/>
-            <TextBlock Text="{Binding Tel}"/>
         </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </phone:PhoneApplicationPage>
